# bachelorarbeit

./: LICENSE.md  README.md
data/: cpuzeit.ods  ladezeit.ods  traffic.ods  traffic.txt
docker/: Dockerfile  README.md  configure.sh  docker-compose.yml
har-filter/: Cargo.toml  README.md
har-filter/src/: filter.rs  main.rs  nginx_push.rs  route_deps.rs
loadingtime/: LICENSE.md  README.md  package-lock.json  package.json
loadingtime/src/: cli.js
nginx-docker/: Dockerfile  Dockerfile.http1  Dockerfile.http1proxy  Dockerfile.http2  Dockerfile.http2push  Dockerfile.http3  README.md  boringssl-make.patch  build-images.sh  docker-compose.yml  nginx.conf  nginx.conf.http1  nginx.conf.http1proxy  nginx.conf.http2  nginx.conf.http2push  nginx.conf.http3  startup.sh
tools/: build-images.sh  launch-chromium-quic.sh  launch-chromium.sh  loop-request-out.sh  loop-request.sh  make-scripts-executable.sh
tools/certs/: README.md  ca.cnf  generate-certs.sh  leaf.cnf
